# python-aws-lambda-packager

./: .gitignore  Makefile  README.md  pyproject.toml
lambda_packager/: __init__.py  config.py  custom_log_formatter.py  handle_poetry.py  handle_requirements_txt.py  package.py  poetry_entrypoint.py
test/: test_cli.py  test_file_helpers.py  test_package.py  test_poetry_export.py  test_read_config.py
test/resources/: config_we_do_not_care_about.toml  test_config.toml  test_full_config.toml  test_project_config.toml  test_project_config_lockfile  test_project_config_without_hashes.toml
