[tool.poetry]
name = "lambda-packager"
version = "1.2.0"
description = "Stop writing your own scripts and let this package your python aws lambda zips for you"
authors = ["cob16 <public+github@cormacbrady.info>"]
repository = "https://github.com/hmrc/python-aws-lambda-packager"
readme = "README.md"
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.8.0"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
black = "^21.5b1"
pytest = "^6.2.4"

[tool.poetry.scripts]
lambda-packager = 'lambda_packager:run_cli'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.lambda-packager]
src_patterns   = ["lambda_packager/*.py"]
ignore_folders = ["venv"]
